<resources>
    <string name="app_name">Proyecto</string>
    <string name="title_activity_registro">Registro</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="nombre">Primer Nombre:</string>
    <string name="nombreDesc">Primer nombre del usuario</string>

    <string name="apellido">Primer apellido:</string>
    <string name="apellidoDesc">Primer apellido del usaurio</string>

    <string name="username">Usuario:</string>
    <string name="usernameDesc">Ingrese un usuario </string>

    <string name="correo">Correo:</string>
    <string name="correoDesc">Ingrese un correo</string>

    <string name="password">Contrasena:</string>
    <string name="passwordDesc">Ingrese una contrasena</string>

    <string name="confirmpassword">Confirmar contrasena:</string>

    <string name="registro">Registro</string>
    <string name="login">Login</string>
    <string name="mandar">Registro</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="btnJuegoReiniciar">Reiniciar</string>
    <string name="btnJuegoQuitar">Salir</string>

    <string-array name="nombres">
        <item>Bowser</item>
        <item>Captain Falcon</item>
        <item>Cloud</item>
        <item>Daisy</item>
        <item>Donkey Kong</item>
        <item>Falco</item>
        <item>Fox</item>
        <item>Ice Climbers</item>
        <item>Jigglypuff</item>
        <item>Kirby</item>
        <item>Link</item>
        <item>Luigi</item>
        <item>Ness</item>
        <item>Pacman</item>
        <item>Peach</item>
        <item>Pichu</item>
        <item>Pikachu</item>
        <item>Mario</item>
        <item>Samus</item>
        <item>Sheik</item>
        <item>Sonic</item>
        <item>Sora</item>
        <item>Yoshi</item>
        <item>Zelda</item>
    </string-array>
</resources>