<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gradiente"
            android:orientation="vertical"
            android:gravity="center"
            >
            <TextView
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Registro"
                android:textSize="26sp"/>
        </LinearLayout>
        <ScrollView
            android:background="@color/end"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/vista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/nombreDesc"
                        android:labelFor="@+id/primernombre"
                        android:text="@string/nombre"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/prueba1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red" />
                </LinearLayout>

                <EditText
                    android:textColor="@color/white"
                    android:id="@+id/primernombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:autofillHints="name"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:maxLength="100" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/apellidoDesc"
                        android:labelFor="@+id/primerapellido"
                        android:text="@string/apellido" />

                    <TextView
                        android:id="@+id/prueba2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red" />
                </LinearLayout>

                <EditText
                    android:textColor="@color/white"
                    android:id="@+id/primerapellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:autofillHints="name"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:maxLength="100" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/usernameDesc"
                        android:labelFor="@+id/user"
                        android:text="@string/username" />

                    <TextView
                        android:id="@+id/prueba3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red" />
                </LinearLayout>

                <EditText
                    android:textColor="@color/white"
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:autofillHints="username"
                    android:gravity="center"
                    android:inputType="text"
                    android:maxLength="50" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/correoDesc"
                        android:labelFor="@+id/correo"
                        android:text="@string/correo" />

                    <TextView
                        android:id="@+id/prueba4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red" />
                </LinearLayout>

                <EditText
                    android:textColor="@color/white"
                    android:id="@+id/correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:autofillHints="emailAddress"
                    android:gravity="center"
                    android:inputType="textEmailAddress"
                    android:maxLength="100" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:labelFor="@+id/password"
                        android:text="@string/password" />

                    <TextView
                        android:id="@+id/prueba5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red" />
                </LinearLayout>

                <EditText
                    android:textColor="@color/white"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:autofillHints="password"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:maxLength="100" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:labelFor="@+id/confirmarpassword"
                        android:text="@string/confirmpassword" />

                    <TextView
                        android:id="@+id/prueba6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red" />
                </LinearLayout>

                <EditText
                    android:textColor="@color/white"
                    android:id="@+id/confirmarpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:autofillHints="password"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:maxLength="100" />

                <Button
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:id="@+id/mandar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/verdepistashe"
                    android:textColor="@color/rosita"
                    android:text="@string/mandar" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Ya tienes una cuenta?"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/cuentaexistente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Login"
                    android:textSize="16sp"
                    android:textColor="@color/purple_200" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>